# hook_crawler

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.test.yml  docker-compose.yml  pyproject.toml  sample.env  setup.cfg
.github/workflows/: docker-image.yml  pytest.yml
crawler/: scrapy.cfg  setup.py
crawler/product_crawler/: middlewares.py  settings.py
hook_crawlers/: _cmd.py  cmd.py  get_deployable_project.py  proxy-list.txt  scrapy.cfg  scrapyd_start.sh
hook_crawlers/product_crawler/: middlewares.py  pipelines.py  settings.py  utils.py
hook_crawlers/product_crawler/libs/: checksums.py
hook_crawlers/product_crawler/repositories/: exceptions.py  product_repository.py  release_repository.py
hook_crawlers/product_crawler/spiders/: __init__.py  gsc_post.py
hook_crawlers/product_crawler/usecases/: release_usecase.py
tests/: conftest.py  test_checksum_generating.py  test_pipelines.py  test_spiders.py
tests/test_repositories/: test_product_repository.py  test_release_repository.py
tests/test_usecases/: test_release_usecase.py
