[tool.poetry]
name = "hook_crawlers"
version = "0.0.5"
description = ""
authors = ["Elton Chou <plscd748@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
figure-hook = {git = "https://github.com/FigureHook/figure_hook.git", tag = "v0.1.1"}
Scrapy = "^2.5.1"
scrapyd = "^1.2.1"
scrapyd-client = "^1.2.0"
scrapy-proxies = "^0.4"
click = "^8.0.3"
Pillow = "^9.1.0"
boto3 = "^1.22.12"
dacite = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
Faker = "^9.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
